organize files and folders

--- a/popup/index.html
+++ b/popup/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Epoclip Popup</title>
-    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="/popup/styles.css" />
   </head>
 
   <body>
@@ -16,6 +16,6 @@
 
     <div id="epoclip-popup-content"></div>
 
-    <script src="popup.js"></script>
+    <script src="/popup/script.js"></script>
   </body>
 </html>
